# trading

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  justfile  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
src/shadow_bot/: __init__.py  main.py  resolver.py  scanner.py
src/shadow_bot/adapters/: kalshi.py  repo_sqlite.py
src/shadow_bot/adapters/database/: models.py  sqlite.py
src/shadow_bot/adapters/webhooks/: discord.py
src/shadow_bot/core/: __init__.py  filter.py  models.py  ports.py  risk.py
tests/: test_main.py  test_resolver.py  test_scanner.py
tests/adapters/: __init__.py  test_kalshi.py  test_repo_sqlite.py
tests/adapters/webhooks/: test_discord.py
tests/core/: __init__.py  test_filter.py  test_models.py  test_risk.py
