[project]
name = "shadow-bot"
version = "0.1.0"
description = "Kalshi Shadow Trading Bot for Favorite-Longshot Bias"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "cryptography>=42.0.8", # For RSA-PSS signing
    "click>=8.1.7",
    "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.1",
    "ruff>=0.5.0",
    "pyright>=1.1.370"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = []

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
